removed z-index, fixed positioning bug.

--- a/src/components/widgets/Navigation.scss
+++ b/src/components/widgets/Navigation.scss
@@ -5,7 +5,6 @@
   padding: 0.75rem 0.5rem;
   top: 0;
   left: 0;
-  z-index: 100;
   transition: 1s ease-in-out;
 
   button, a {
