--- a/src/components/widgets/QuizBox.scss
+++ b/src/components/widgets/QuizBox.scss
@@ -8,7 +8,7 @@ $padding: 6rem;
   padding: $padding;
 
   &.is-open {
-    z-index: 1000;
+    z-index: 100;
   }
 
   .label {
