--- a/src/pages/App.scss
+++ b/src/pages/App.scss
@@ -27,7 +27,6 @@
   justify-content: center;
 
   .alert {
-    z-index: 1000; //todo: remove
     position: absolute;
     width: 95vw;
     height: 80vh;
