--- a/src/pages/intro/IntroductionPage.scss
+++ b/src/pages/intro/IntroductionPage.scss
@@ -1,16 +1,12 @@
 .IntroductionPage {
   overflow: hidden;
-
-  .background-filter {
-    background: linear-gradient(rgba(0,0,0,0.01), rgba(0,0,0,0.7));
-    width: 100%;
-    bottom: 0;
-    height: 50%;
-    position: absolute;
-  }
+  position: relative;
 
   .page-headline {
-    z-index: 1;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
   }
 
   .slides-container {
@@ -48,6 +44,14 @@
     .RoundButton {
       margin: 1rem;
     }
+  }
+
+  .background-filter {
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(rgba(0,0,0,0.01), rgba(0,0,0,0.7));
+    width: 100%;
+    height: 50%;
   }
 
   .slide {
